--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2416,7 +2416,7 @@ footer {
 
 @media (max-width: 992px) {
   .home-sec2 {
-    height: 85vh;
+    height: 105vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -2424,6 +2424,18 @@ footer {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+}
+
+@media (max-width: 768px) {
+  .home-sec2 {
+    height: 95vh;
+  }
+}
+
+@media (max-width: 576px) {
+  .home-sec2 {
+    height: 85vh;
   }
 }
 
@@ -2611,7 +2623,12 @@ footer {
   }
 }
 
-.home-sec2-container-display button {
+.home-sec2-container-display-button {
+  width: 10rem;
+}
+
+.home-sec2-container-display-button button {
+  width: 100%;
   background-color: transparent;
   border: 0.0625rem solid #b68b69;
   overflow: hidden;
@@ -2625,7 +2642,7 @@ footer {
   margin-bottom: 1.5rem;
 }
 
-.home-sec2-container-display button::after {
+.home-sec2-container-display-button button::after {
   content: '';
   position: absolute;
   left: 0;
@@ -2639,7 +2656,7 @@ footer {
   display: block;
 }
 
-.home-sec2-container-display button span, .home-sec2-container-display button a {
+.home-sec2-container-display-button button span, .home-sec2-container-display-button button a {
   -webkit-transition: 0.2s ease-in;
   transition: 0.2s ease-in;
   position: relative;
@@ -2647,18 +2664,16 @@ footer {
   z-index: 2;
 }
 
-.home-sec2-container-display button:hover span, .home-sec2-container-display button:hover a {
+.home-sec2-container-display-button button:hover span, .home-sec2-container-display-button button:hover a {
   color: #fdfcfc;
 }
 
-.home-sec2-container-display button:hover::after {
+.home-sec2-container-display-button button:hover::after {
   right: 0;
 }
 
-@media (max-width: 992px) {
-  .home-sec2-container-display button {
-    margin-bottom: 0.5rem;
-  }
+.home-sec2-container-display-button img {
+  width: 100%;
 }
 
 .home-sec3 {
@@ -2671,13 +2686,42 @@ footer {
   max-width: 100rem;
   margin: auto;
   width: 100%;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
   text-align: center;
+}
+
+@media (min-width: 576px) {
+  .home-sec3-container {
+    max-width: 516px;
+  }
+}
+
+@media (min-width: 768px) {
+  .home-sec3-container {
+    max-width: 708px;
+  }
+}
+
+@media (min-width: 992px) {
+  .home-sec3-container {
+    max-width: 932px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .home-sec3-container {
+    max-width: 1140px;
+  }
 }
 
 @media (max-width: 992px) {
   .home-sec3-container {
-    padding-left: 4.5rem;
-    padding-right: 4.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 
@@ -7061,6 +7105,52 @@ footer {
   background-color: #5d5854;
 }
 
+.applications-carousel {
+  height: 48rem;
+}
+
+@media (max-width: 1600px) {
+  .applications-carousel {
+    height: 42rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  .applications-carousel {
+    height: 36rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .applications-carousel {
+    height: 30rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .applications-carousel {
+    height: 24rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .applications-carousel {
+    height: 20rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .applications-carousel {
+    height: 14rem;
+  }
+}
+
+@media (max-width: 350px) {
+  .applications-carousel {
+    height: 12rem;
+  }
+}
+
 #banner-applications {
   margin-bottom: 0;
 }
@@ -8673,7 +8763,7 @@ footer {
   position: relative;
   background-size: cover;
   background-position: center;
-  height: 48rem;
+  height: 46rem;
 }
 
 @media (max-width: 1600px) {
@@ -10100,7 +10190,7 @@ footer {
   color: #2F353D;
   font-size: 0.8125rem;
   line-height: 1.25rem;
-  max-height: 5rem;
+  height: 5rem;
   overflow: hidden;
 }
 
