--- a/src/scss/page/_innovation.scss
+++ b/src/scss/page/_innovation.scss
@@ -415,7 +415,7 @@
                                     color: #2F353D;
                                     font-size: 0.8125rem;
                                     line-height: 1.25rem;
-                                    max-height: 1.25rem*4;
+                                    height: 1.25rem*4;
                                     overflow: hidden;
                                 }
                             }
