--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2409,9 +2409,15 @@ footer {
   background-position: right center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
+  height: 85vh;
   position: relative;
   overflow: hidden;
+}
+
+@media (max-width: 1200px) {
+  .home-sec2 {
+    height: 50vh;
+  }
 }
 
 @media (max-width: 992px) {
@@ -2830,7 +2836,7 @@ footer {
 }
 
 .home-sec4 {
-  height: 100vh;
+  height: 85vh;
   background-color: #101010;
   position: relative;
   background-size: cover;
@@ -2920,7 +2926,7 @@ footer {
   margin: 0 auto;
   width: 100%;
   margin-top: 3rem;
-  margin-bottom: 12rem;
+  margin-bottom: 3rem;
   padding-left: 3.75rem;
   padding-right: 3.75rem;
 }
@@ -6831,7 +6837,6 @@ footer {
   left: 50%;
   -webkit-transform: translate(-50%, 100%);
           transform: translate(-50%, 100%);
-  font-weight: bolder;
 }
 
 #silck-year .silck-item:hover button {
@@ -6968,7 +6973,7 @@ footer {
 #silck-about .silck-item .silck-item-dispay figure figcaption {
   margin: 0.5rem 0;
   padding: 0 1.5rem;
-  height: 3.6rem;
+  height: 4.8rem;
   overflow: hidden;
   z-index: 950;
 }
