--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9353,13 +9353,7 @@ footer {
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
   text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  overflow: hidden;
   width: 100%;
   height: 100%;
 }
@@ -9417,9 +9411,6 @@ footer {
 }
 
 .design-sec2_video-row-col-figure figure p {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -10123,13 +10114,7 @@ footer {
           box-shadow: 1px 1px 2px 1px rgba(100, 100, 100, 0.2);
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  overflow: hidden;
   height: 100%;
   width: 100%;
 }
@@ -10152,8 +10137,6 @@ footer {
 }
 
 .innovation-sec2_video-row-col-figure figure img {
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
   width: 100%;
   background-size: cover;
   margin-bottom: 0.375rem;
@@ -10185,9 +10168,6 @@ footer {
 
 .innovation-sec2_video-row-col-figure figure p {
   text-align: left;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -11112,6 +11092,15 @@ footer {
 @media screen and (-ms-high-contrast: active) and (max-width: 576px), (-ms-high-contrast: none) and (max-width: 576px) {
   .ourbraud-sec5_table-body-row {
     padding-bottom: 1.5rem;
+  }
+}
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .about-sec3-graphics {
+    display: block;
+  }
+  .about-sec3-graphics {
+    display: -webkit-box !important;
   }
 }
 
