--- a/src/scss/page/_design.scss
+++ b/src/scss/page/_design.scss
@@ -252,8 +252,9 @@
                             box-shadow : 1px 1px 2px 1px rgba(100,100,100,.2);
                             transition: all 0.2s;
                             text-align: center;
-                            display: flex;
-                            flex-direction: column;
+                            overflow: hidden;
+                            // display: flex;
+                            // flex-direction: column;
                             width: 100%;
                             height: 100%;
                             .img{
@@ -296,7 +297,7 @@
                                 @include my(0.375rem);
                             }
                             p{
-                                flex-grow: 1;
+                                //flex-grow: 1;
                                 display: flex;
                                 align-items: center;
                                 justify-content: center;
