--- a/src/scss/page/_applications.scss
+++ b/src/scss/page/_applications.scss
@@ -492,45 +492,75 @@ $applications-silck-navbar-height: 3rem;
 
 .gotop{
     position: fixed;
-    bottom: 1rem;
-    right: 1rem;
+    bottom: 3rem;
+    @include media-min($md) {
+        right: auto;
+        left:  50%;
+    }
+    @include media-max($md) {
+        right: 1rem;
+        left:  auto;
+    }
+    z-index: 1006;
     
+    &.top button{
+        display: none;
+    }
+    &.bottom button{
+        display: none;
+    }
+
     button{
-        background-color: #c2bfcb;
-        width: 2rem;
+        @include media-min($md) {
+            transform: translateX($md/2 - 60);
+        }
+        @include media-min($lg) {
+            transform: translateX($lg/2 - 60);
+        }
+        @include media-min($xl) {
+            transform: translateX($xl/2 - 60);
+        }
+        @include media-min($xxl) {
+            transform: translateX($xxl/2 - 60);
+        }
+        @include media-max($md) {
+            transform: translateX(0);
+        }
+        background-color: rgba(33, 37, 48, 1);
+        width: 2.5rem;
         height: 2rem;
         z-index: 900;
         box-shadow: none;
-        opacity: 0.75;
-        border-radius: 0.5rem;
+        opacity: 0.4;
+        border-radius: 0.125em;
         border: 0;
 
         &::after{
             content: '';
             position: absolute;
             background-color: #fff;
-            top: 50%;
+            top: 43%;
             border-radius: 0.25rem;
             width: 0.625rem;
             height: 0.125rem;
             opacity: 1;
-            transform: translate(0.5rem,-0.125rem) rotate(45deg);
+            transform: translate(0.5rem,-0.125rem) rotate(30deg);
             right: 50%;
         }
         &::before{
             content: '';
             position: absolute;
             background-color: #fff;
-            top: 50%;
+            top: 43%;
             border-radius: 0.25rem;
             width: 0.625rem;
             height: 0.125rem;
             opacity: 1;
-            transform: translate(0.125rem, -0.125rem)rotate(-45deg);
+            transform: translate(0.125rem, -0.125rem)rotate(-30deg);
             right: 50%;
         }  
         &:hover {
-            opacity: 1;
+            opacity: 0.8;
         }   
     }
 }
