--- a/src/scss/page/_header.scss
+++ b/src/scss/page/_header.scss
@@ -140,6 +140,7 @@ main{
                 top: 3rem;
                 left: 0;
                 right: 0;
+                border-bottom: solid 0.0625rem #fff;
             }
             &.active{
                 display: flex;
