--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1731,6 +1731,7 @@ main {
     top: 3rem;
     left: 0;
     right: 0;
+    border-bottom: solid 0.0625rem #fff;
   }
 }
 
@@ -2442,13 +2443,13 @@ footer {
 
 @media (max-width: 768px) {
   .home-sec2 {
-    height: 95vh;
+    height: 50rem;
   }
 }
 
 @media (max-width: 576px) {
   .home-sec2 {
-    height: 85vh;
+    height: 46rem;
   }
 }
 
@@ -2585,6 +2586,7 @@ footer {
 .home-sec2-container-display h3 {
   color: #b68b69;
   line-height: 1.2;
+  max-width: 25rem;
   margin-bottom: 1rem;
 }
 
@@ -2633,6 +2635,8 @@ footer {
 @media (max-width: 992px) {
   .home-sec2-container-display h3 {
     margin-bottom: 0.5rem;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -2875,14 +2879,14 @@ footer {
 
 @media (max-width: 576px) {
   .home-sec4 {
-    height: 65vh;
+    height: 40rem;
     background-size: 240%;
   }
 }
 
 @media (max-width: 400px) {
   .home-sec4 {
-    height: 50vh;
+    height: 35rem;
     background-size: 200%;
   }
 }
@@ -4050,7 +4054,7 @@ footer {
 }
 
 #banner-ourbraud .slick-dots {
-  bottom: 1rem;
+  bottom: 4rem;
 }
 
 #banner-ourbraud .slick-dots li {
@@ -4953,6 +4957,7 @@ footer {
 
 .about-sec3-graphics-center-heading h4 {
   font-size: 1.125rem;
+  font-weight: bolder;
 }
 
 .about-sec3-graphics-center-heading p {
@@ -5873,7 +5878,7 @@ footer {
 
 .about-sec2 {
   background-color: #92a9c9;
-  height: 50rem;
+  height: 40rem;
   overflow: hidden;
 }
 
@@ -5886,6 +5891,8 @@ footer {
 @media (max-width: 992px) {
   .about-sec2 {
     height: auto;
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
   }
 }
 
@@ -5957,7 +5964,7 @@ footer {
           flex-grow: 0;
   -ms-flex-negative: 0;
       flex-shrink: 0;
-  padding-right: 3rem;
+  padding-right: 2.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -5997,7 +6004,7 @@ footer {
 
 .about-sec2-container-display-row-text-heading h3 {
   color: #fefefe;
-  margin-top: 3rem;
+  margin-top: 2.5rem;
   margin-bottom: 0.5rem;
   font-weight: bolder;
 }
@@ -6048,7 +6055,7 @@ footer {
   font-size: 1.5rem;
   line-height: 1.2;
   color: #fefefe;
-  margin-bottom: 3rem;
+  margin-bottom: 2.5rem;
 }
 
 .about-sec2-container-display-row-figure {
@@ -6089,22 +6096,22 @@ footer {
 @media (max-width: 992px) {
   .about-sec2-container-display-row-figure figure {
     height: 12rem;
-    margin-top: 3rem;
-    margin-bottom: 3rem;
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
   }
 }
 
 .about-sec3 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-  padding-top: 5rem;
+  padding-top: 6rem;
   background-color: #e5e3ea;
   overflow: hidden;
 }
 
 @media (max-width: 992px) {
   .about-sec3 {
-    padding-top: 1rem;
+    padding-top: 3.5rem;
   }
 }
 
@@ -6986,7 +6993,7 @@ footer {
 #silck-about .silck-item .silck-item-dispay figure figcaption {
   margin: 0.5rem 0;
   padding: 0 1.5rem;
-  height: 4.8rem;
+  height: 6rem;
   overflow: hidden;
   z-index: 950;
 }
@@ -7506,7 +7513,7 @@ footer {
 }
 
 #banner-applications .slick-dots {
-  bottom: 1rem;
+  bottom: 4rem;
 }
 
 #banner-applications .slick-dots li {
@@ -8287,6 +8294,14 @@ footer {
   }
 }
 
+@media (max-width: 992px) {
+  .knowledge-sec1-container-display h2 {
+    text-align: center;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+
 .knowledge-sec2 {
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
@@ -8570,6 +8585,7 @@ footer {
   margin-bottom: 0.5rem;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+  text-align: center;
 }
 
 .knowledge-sec2_video-row-col-figure figure h4 span, .knowledge-sec2_video-row-col-figure figure h4 a {
@@ -8584,6 +8600,7 @@ footer {
 }
 
 .knowledge-sec2_video-row-col-figure figure p {
+  text-align: left;
   line-height: 1.25rem;
   height: 5rem;
   overflow: hidden;
@@ -9169,7 +9186,7 @@ footer {
 }
 
 #banner-design .slick-dots {
-  bottom: 1rem;
+  bottom: 4rem;
 }
 
 #banner-design .slick-dots li {
@@ -9456,6 +9473,7 @@ footer {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  text-align: center;
   font-size: 1.25rem;
   color: #2F353D;
   font-weight: bolder;
@@ -9482,6 +9500,7 @@ footer {
   padding-right: 1.5rem;
   margin-top: 0.75rem;
   margin-bottom: 1.5rem;
+  text-align: left;
 }
 
 .design-sec2_video-row-col-figure figure p a {
@@ -9863,7 +9882,7 @@ footer {
 }
 
 #banner-innovation .slick-dots {
-  bottom: 1rem;
+  bottom: 4rem;
 }
 
 #banner-innovation .slick-dots li {
@@ -9903,6 +9922,12 @@ footer {
 .innovation-sec2 {
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
+}
+
+@media (max-width: 1200px) {
+  .innovation-sec2 {
+    padding-top: 0.5rem;
+  }
 }
 
 .innovation-sec2-container {
@@ -9993,6 +10018,12 @@ footer {
   margin-bottom: 3rem;
 }
 
+@media (max-width: 1200px) {
+  .innovation-sec2-container h3 {
+    margin-bottom: 0.5rem;
+  }
+}
+
 .innovation-sec2_video-buttonGroup {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -10005,6 +10036,8 @@ footer {
   .innovation-sec2_video-buttonGroup {
     padding-left: 0.25rem;
     padding-right: 0.25rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -10217,6 +10250,7 @@ footer {
   font-weight: bolder;
   margin-top: 0.375rem;
   margin-bottom: 0.375rem;
+  text-align: center;
 }
 
 .innovation-sec2_video-row-col-figure figure h4 span, .innovation-sec2_video-row-col-figure figure h4 a {
