--- a/src/scss/animate/_about.scss
+++ b/src/scss/animate/_about.scss
@@ -81,6 +81,7 @@
             }
             h4{
                 font-size: 1.125rem;
+                font-weight: bolder;
             }
             p{
                 color: #010101;
