--- a/src/scss/page/_design.scss
+++ b/src/scss/page/_design.scss
@@ -143,7 +143,7 @@
     }
 
     .slick-dots{
-        bottom: 1rem;;
+        bottom: 4rem;;
         li{
             width: 1rem;
             height: 1rem;
@@ -291,6 +291,7 @@
                                 flex-shrink: 0;
                                 @include px(1.5rem);
                                 @include text-ellipsis;
+                                text-align: center;
                                 font-size: 1.25rem;
                                 color: #2F353D;
                                 font-weight: bolder;
@@ -304,6 +305,7 @@
                                 @include px(1.5rem);
                                 margin-top: 0.75rem;
                                 margin-bottom: 1.5rem;
+                                text-align: left;
 
                                 a{
                                     color: #2F353D;
