--- a/src/scss/page/_knowledge.scss
+++ b/src/scss/page/_knowledge.scss
@@ -27,6 +27,10 @@
                     color: white;
                     margin-bottom: 0.75rem;
                     text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0,0,0,0.8);
+                    @include media-max($lg) {
+                        text-align: center;
+                        @include px(1rem)
+                    }
                 }
             }
         }
@@ -170,6 +174,7 @@
                                 @include text-ellipsis;
                                 @include my(0.5rem);
                                 @include px(1.5rem);
+                                text-align: center;
                                 a{
                                     font-size: 1.25rem;
                                     color: #2F353D;
@@ -177,6 +182,7 @@
                                 }
                             }
                             p{
+                                text-align: left;
                                 line-height: 1.25rem;
                                 height: 1.25rem*4;
                                 overflow: hidden;
