--- a/src/scss/page/_about.scss
+++ b/src/scss/page/_about.scss
@@ -159,6 +159,7 @@ $size-xs: 0.6;
             h4{
                 font-size: 1.125rem;
                 margin-bottom: 0.5rem;
+                font-weight: bolder;
             }
             p{
                 color: #2F353D;
@@ -189,18 +190,18 @@ $size-xs: 0.6;
 
             &#{-display}{
                 text-align: center;
-                @include py(4.5rem);
+                @include py(3rem);
 
                 h2{
                     color: #2F353D;
                     @include display-3;
-                    margin-bottom: 1.5rem;
+                    margin-bottom: 3rem;
                     font-weight: bolder;
                 }
                 p{
                     color: #2F353D;
                     font-size: 0.9375rem;
-                    margin-bottom: 1rem;
+                    margin-bottom: 3rem;
                     &:nth-of-type(1){
                         max-width: 992px;
                         margin-left: auto;
@@ -226,18 +227,12 @@ $size-xs: 0.6;
         background-position: center;
         &#{-container}{
             @include container;
-            padding-top: 5rem;
-            padding-bottom: 8rem;
-            @include media-max($lg) {
-                padding-bottom: 6rem;
-            }
-            @include media-max($sm) {
-                padding-bottom: 4rem;
-            }
+            padding-top: 3rem;
+            padding-bottom: 3rem;
 
             &#{-display}{
-                padding-top: 1rem;
-                padding-bottom: 7.5rem;
+                padding-top: 0rem;
+                padding-bottom: 3rem;
                 max-width: 1140px;
                 margin: 0 auto;
                 width: 100%;
@@ -252,7 +247,7 @@ $size-xs: 0.6;
                 h2{
                     color: #fcfcfb;
                     @include display-3;
-                    margin-bottom: 1.5rem;
+                    margin-bottom: 3rem;
                     font-weight: bolder;
                 }
                 p{
@@ -313,10 +308,10 @@ $size-xs: 0.6;
         background-position: center;
         &#{-container}{
             @include container;
-            @include py(4rem);
+            @include py(3rem);
 
             &#{-display}{
-                padding-bottom: 5rem;
+                padding-bottom: 3rem;
                 margin: 0 auto;
                 width: 100%;
                 text-align: center;
@@ -324,7 +319,7 @@ $size-xs: 0.6;
                 h2{
                     color: #2F353D;
                     @include display-3;
-                    margin-bottom: 1.5rem;
+                    margin-bottom: 3rem;
                     font-weight: bolder;
                 }
                 p{
